[package]
name = "dlux"
version = "0.1.2"
authors = ["Billy J Rhoades II <me@brod.es>"]
description = "dlux adjusts hardware monitor brightness to match the sunset"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

tokio = { version = "0.3.2", features = ["macros", "net", "rt-multi-thread"] }

log = "0.4.0"
env_logger = "0.8.1"
anyhow = "1.0"

chrono = "0.4"
sun-times = "0.1.2"
humantime = "2.0.1"

ddc-i2c = { version = "0.2.1", features = ["with-linux-enumerate"] }
i2c-linux = "0.1.2"
ddc = "0.2.2"

nix = "0.19.0"

[lib]
name = "lib"
path = "src/lib/lib.rs"
