[package]
name = "dlux"
version = "0.2.0"
authors = ["Billy J Rhoades II <me@brod.es>"]
description = "dlux adjusts hardware monitor brightness to match the sunset"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
clap = { version = "2.33.3", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_regex = "1.1"
regex = "1.9"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

chrono = "0.4"
sun-times = "0.2"
humantime = "2.0.1"

ddc-i2c = { version = "0.2", features = ["with-linux-enumerate"] }
i2c-linux = "0.1"
ddc = "0.2"

nix = "0.26"

adaptive_backoff = "0.2"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[profile.release]
lto = true
